fix application runnig